--- a/client/src/components/Main/SidebarLeft/SidebarLeft.scss
+++ b/client/src/components/Main/SidebarLeft/SidebarLeft.scss
@@ -19,6 +19,7 @@
         box-shadow: var(--box-shadow);
         width: 100%;
         box-sizing: border-box;
+        cursor: pointer;
     }
 
     &__avatar {
