--- a/client/src/components/utils/Alerts/Alerts.scss
+++ b/client/src/components/utils/Alerts/Alerts.scss
@@ -78,6 +78,7 @@
         bottom: 0px;
         left: 0px;
         right: 0px;
+        align-items: center;
 
         &__box {
             max-width: 90%;
