--- a/client/src/screens/Main/Account/Account.scss
+++ b/client/src/screens/Main/Account/Account.scss
@@ -19,6 +19,8 @@
 
 @media (max-width: 1000px) {
     .account {
+        padding-bottom: 50px;
+
         &__formWrapper {
             padding: 15px;
         }
